--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -363,20 +363,12 @@ function showBanner() {
 	banner.classList.remove('opacity-0', 'scale-105');
 }
 
-// 专用于创建loadComment的事件，即通知评论组件进行一次加载
-function initCommentComponent() {
-  const event = new Event("loadComment");
-  document.dispatchEvent(event);
-}
-// twikoo评论
-
 function init() {
 	// disableAnimation()()		// TODO
 	loadTheme();
 	loadHue();
 	initCustomScrollbar();
 	showBanner();
-	initCommentComponent();  // 调用initCommentComponent()函数，twikoo
 }
 
 /* Load settings when entering the site */
@@ -412,14 +404,7 @@ const setup = () => {
 			navbar.classList.add('navbar-hidden')
 		}
 	})
-	
-	  // window.swup.hooks.on('content:replace', initCustomScrollbar)
-	  window.swup.hooks.on("content:replace", () => {
-	  initCustomScrollbar();
-	  initCommentComponent(); // 添加代码调用
-	  });
-
-
+	window.swup.hooks.on('content:replace', initCustomScrollbar)
 	window.swup.hooks.on('visit:start', (visit: {to: {url: string}}) => {
 		// change banner height immediately when a link is clicked
 		const bodyElement = document.querySelector('body')
