--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -368,6 +368,7 @@ function init() {
 	loadTheme();
 	loadHue();
 	initCustomScrollbar();
+	initCommentComponent();
 	showBanner();
 }
 
@@ -554,6 +555,7 @@ const setup = () => {
 		"content:replace",
 		() => {
 			lightbox?.destroy?.()
+			initCommentComponent();
 		},
 		{ before: true },
 	)
