--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -368,7 +368,13 @@ function init() {
 	loadTheme();
 	loadHue();
 	initCustomScrollbar();
+	initCommentComponent();
 	showBanner();
+}
+
+function initCommentComponent() {
+  const event = new Event("loadComment");
+  document.dispatchEvent(event);
 }
 
 /* Load settings when entering the site */
@@ -554,6 +560,7 @@ const setup = () => {
 		"content:replace",
 		() => {
 			lightbox?.destroy?.()
+			initCommentComponent();
 		},
 		{ before: true },
 	)
