--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,5 +1,6 @@
 ---
 import path from "node:path";
+import Twikoo from "@components/comment/Twikoo.astro";
 import License from "@components/misc/License.astro";
 import Markdown from "@components/misc/Markdown.astro";
 import I18nKey from "@i18n/i18nKey";
@@ -110,6 +111,8 @@ const jsonLd = {
 
         </div>
     </div>
+
+    <div class="card-base p-6 mb-4"><Twikoo path={`/posts/${entry.slug}`} /></div>
 
     <div class="flex flex-col md:flex-row justify-between mb-4 gap-4 overflow-hidden w-full">
         <a href={entry.data.nextSlug ? getPostUrlBySlug(entry.data.nextSlug) : "#"}
