--- a/src/components/comment/Twikoo.astro
+++ b/src/components/comment/Twikoo.astro
@@ -15,12 +15,12 @@ const config = {
   function loadTwikoo() {
     const script = document.createElement("script");
     script.src =
-      "https://blogtwikoo.sixmy.dpdns.org/twikoo.min.js";
+      "https://twikoo-nu-six-37.vercel.app/twikoo.min.js";
     script.defer = true;
     script.onload = () => {
       twikoo.init({
         ...config,
-        envId: "https://blogtwikoo.sixmy.dpdns.org", // 你的envId，获取方法请参照Twikoo文档
+        envId: "https://twikoo-nu-six-37.vercel.app", // 你的envId，获取方法请参照Twikoo文档
         lang: "zh-CN", // 评论区语言
       }); // 传入配置信息
     };
