--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,5 +1,6 @@
 ---
 import path from "node:path";
+import Comment from "@components/comment/index.astro"; // twikoo评论
 import License from "@components/misc/License.astro";
 import Markdown from "@components/misc/Markdown.astro";
 import I18nKey from "@i18n/i18nKey";
@@ -110,6 +111,9 @@ const jsonLd = {
 
         </div>
     </div>
+
+    <Comment post={entry}></Comment>
+    <!-- twikoo评论 -->
 
     <div class="flex flex-col md:flex-row justify-between mb-4 gap-4 overflow-hidden w-full">
         <a href={entry.data.nextSlug ? getPostUrlBySlug(entry.data.nextSlug) : "#"}
