--- a/src/components/comment/Twikoo.astro
+++ b/src/components/comment/Twikoo.astro
@@ -1,5 +1,7 @@
 ---
 import WidgetLayout from "@components/widget/WidgetLayout.astro";
+import I18nKey from "@i18n/i18nKey";
+import { i18n } from "@i18n/translation";
 import { commentConfig } from "@/config";
 
 interface Props {
