--- a/src/components/comment/Twikoo.astro
+++ b/src/components/comment/Twikoo.astro
@@ -24,7 +24,7 @@ function loadTwikoo() {
   // 动态加载 Twikoo 脚本，并在加载完成后执行 twikoo.init
 
   const script = document.createElement('script');
-  script.src = 'https://twikoo-five-rust.vercel.app/twikoo.min.js';
+  script.src = 'https://twikoo-five-rust.sixmy.dpdns.org/twikoo.min.js';
   script.defer = true;
   script.onload = () => {
     if (window.twikoo) {
